homepage orientation fix, zigzag row right align fix

--- a/assets/scss/elements/_project-callout-big-image.scss
+++ b/assets/scss/elements/_project-callout-big-image.scss
@@ -51,8 +51,13 @@
         p{
             @include rem(font-size, 2.8rem);
             @include rem(line-height, 3.8rem);
-            @include rem(padding, 0);
+            @include rem(padding-right, 5rem);
             margin: 0;
+            @include media-breakpoint-down(md){
+                @include rem(padding-right, 0rem);
+                text-align: center;
+
+            }
         }
         
         
